--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-in-memory-web-api": "^0.5.4",
-    "ng-zorro-antd": "^0.7.0-beta.1",
     "core-js": "^2.4.1",
+    "echarts": "^4.0.4",
+    "ng-zorro-antd": "^0.7.0-beta.1",
+    "ngx-echarts": "^2.1.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
